--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:mysql@localhost:3306/libro_de_catedra_db?schema=public"
+DATABASE_URL="mysql://root:mysql@localhost:3306/bd_erp_2024?schema=public"
