--- a/NodeApi/package.json
+++ b/NodeApi/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
@@ -15,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
