--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "prisma": "^5.10.2",
     "react": "^18",
