--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
